[Bug 161775] Reply shouldn't quote inline attachments Patch by Jeff Beckley <beckley@qualcomm.com>, r=bienvenu, sr=mscott